--- a/_config.yaml
+++ b/_config.yaml
@@ -84,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : "WANG Gao"
-  avatar           : "haoranhe.jpg"
+  avatar           : # "haoranhe.jpg"
   bio              : "MS. student at School of System Science, Beijing Normal University"
   location         : "Beijing"
   employer         :
@@ -122,33 +122,33 @@ author:
 
 # Reading Files
 include:
-  - .htaccess
-  - _pages
-  - files
+  # - .htaccess
+  # - _pages
+  # - files
 exclude:
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - .asset-cache
-  - .bundle
-  - .jekyll-assets-cache
-  - .sass-cache
-  - CHANGELOG
-  - Capfile
-  - Gemfile
-  - Gruntfile.js
-  - LICENSE
-  - README
-  - Rakefile
-  - assets/js/_main.js
-  - assets/js/plugins
-  - assets/js/vendor
-  - config
-  - gulpfile.js
-  - log
-  - node_modules
-  - package.json
-  - tmp
-  - vendor
+  # - "*.sublime-project"
+  # - "*.sublime-workspace"
+  # - .asset-cache
+  # - .bundle
+  # - .jekyll-assets-cache
+  # - .sass-cache
+  # - CHANGELOG
+  # - Capfile
+  # - Gemfile
+  # - Gruntfile.js
+  # - LICENSE
+  # - README
+  # - Rakefile
+  # - assets/js/_main.js
+  # - assets/js/plugins
+  # - assets/js/vendor
+  # - config
+  # - gulpfile.js
+  # - log
+  # - node_modules
+  # - package.json
+  # - tmp
+  # - vendor
 keep_files:
   - .git
   - .svn
@@ -180,16 +180,16 @@ kramdown:
 collections:
   teaching:
     output: false
-    permalink: /:collection/:path/
+    permalink: # /:collection/:path/
   publications:
     output: true
-    permalink: /:collection/:path/
+    permalink: # /:collection/:path/
   portfolio:
     output: true
-    permalink: /:collection/:path/
+    permalink: # /:collection/:path/
   talks:
     output: false
-    permalink: /:collection/:path/
+    permalink: # /:collection/:path/
 
 
 # Defaults
