--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,12 @@
 main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "About"
+    url: /
   - title: "Research"
-    url: /pages/research/
+    url: /research/
   - title: "Posts"
-    url: /pages/posts/
+    url: /posts/
   # - title: "Collections"
     # url: /collection-archive/
   # - title: "Sitemap"
