--- a/_config.yml
+++ b/_config.yml
@@ -161,6 +161,7 @@ include:
   - .htaccess
   - _pages
   - _posts
+  - _posts/Attachments/
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
